--- a/mingw-w64-python-markupsafe/PKGBUILD
+++ b/mingw-w64-python-markupsafe/PKGBUILD
@@ -3,44 +3,43 @@
 _realname=markupsafe
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.1.5
-pkgrel=3
+pkgver=3.0.2
+pkgrel=1
 pkgdesc="Implements a XML/HTML/XHTML Markup safe string for Python (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/pallets/markupsafe'
 msys2_references=(
   'pypi: MarkupSafe'
 )
-license=('custom')
-url='https://pypi.python.org/pypi/MarkupSafe'
-msys2_repository_url='https://github.com/pallets/markupsafe'
+license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cc")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
-source=("https://pypi.org/packages/source/M/MarkupSafe/MarkupSafe-${pkgver}.tar.gz")
-sha256sums=('d283d37a890ba4c1ae73ffadf8046435c76e7bc2247bbb63c00bd1a709c6544b')
-
-prepare() {
-  rm -rf python-build-${CARCH} | true
-  cp -r "MarkupSafe-${pkgver}" "python-build-${CARCH}"
-}
+source=("https://pypi.org/packages/source/M/MarkupSafe/markupsafe-${pkgver}.tar.gz")
+sha256sums=('ee55d3edf80167e48ea11a923c7386f4669df67d7994554387f84e7d8b0a2bf0')
 
 build() {
-  msg "Python build for ${CARCH}"
-  cd "${srcdir}/python-build-${CARCH}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
+
   ${MINGW_PREFIX}/bin/python -m pytest || warning "Tests failed"
 }
 
 package() {
-  cd "${srcdir}/python-build-${CARCH}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} --root="${pkgdir}" -O1 --skip-build
+  cd "${srcdir}/python-build-${MSYSTEM}"
 
-  install -Dm644 LICENSE.rst "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
+  install -Dm644 LICENSE.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
