--- a/mingw-w64-python-psutil/PKGBUILD
+++ b/mingw-w64-python-psutil/PKGBUILD
@@ -4,14 +4,11 @@ _pyname=psutil
 _realname=${_pyname}
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=5.9.8
-pkgrel=2
+pkgver=6.1.1
+pkgrel=1
 pkgdesc="A cross-platform process and system utilities module for Python (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/giampaolo/psutil"
 msys2_references=(
   'pypi: psutil'
@@ -30,7 +27,7 @@ source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realna
         "0001-mingw-fixes-without-loadlib.patch"
         "0002-pyparsepid.patch"
         "0003-avoid-duplicate-symbols.patch")
-sha256sums=('6be126e3225486dff286a8fb9a06246a5253f4c7c53b475ea5f5ac934e64194c'
+sha256sums=('cf8496728c18f2d0b45198f06895be52f36611711746b7f30c464b422b50e2f5'
             'df8e02d1970d5f9b7df84ae9ad1ba4f86ae069ffce444ae64801b21f66e37bba'
             '64bd54b3c7cd51d7dd906c8065eee607429e14cfe59d4ddf0720cc8e34918065'
             'd877059c372f9d449dafd9781434d329e28f32fa88d11bd1ec11de30b34a9999')
