--- a/mingw-w64-python-types-pyyaml/PKGBUILD
+++ b/mingw-w64-python-types-pyyaml/PKGBUILD
@@ -1,28 +1,27 @@
 # Contributor: Mehdi Chinoune <mehdi.chinoune@hotmail.com>
 
-_pyname=types-PyYAML
 _realname=types-pyyaml
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=6.0.12.12
-pkgrel=2
+pkgver=6.0.12.20241230
+pkgrel=1
 pkgdesc="Typing stubs for PyYAML (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/python/typeshed'
 msys2_references=(
   'pypi: types-PyYAML'
 )
-url='https://github.com/python/typeshed'
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('334373d392fde0fdf95af5c3f1661885fa10c52167b14593eb856289e1855062')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('7f07622dbd34bb9c8b264fe860a17e0efcad00d50b5f27e93984909d9363498c')
 
 build() {
-  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
