python-hypothesis: update to 6.123.7

--- a/mingw-w64-python-hypothesis/PKGBUILD
+++ b/mingw-w64-python-hypothesis/PKGBUILD
@@ -3,38 +3,36 @@
 _realname=hypothesis
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=6.116.0
-pkgrel=2
+pkgver=6.123.7
+pkgrel=1
 pkgdesc="Advanced Quickcheck style testing library for Python (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://hypothesis.works/'
+msys2_repository_url='https://github.com/HypothesisWorks/hypothesis/tree/master/hypothesis-python/'
+msys2_issue_tracker_url='https://github.com/HypothesisWorks/hypothesis/issues/'
+msys2_documentation_url='https://hypothesis.readthedocs.io/'
+msys2_changelog_url='https://hypothesis.readthedocs.io/en/latest/changes.html'
 msys2_references=(
   'archlinux: python-hypothesis'
   'pypi: hypothesis'
 )
-msys2_changelog_url='https://hypothesis.readthedocs.io/en/latest/changes.html'
-msys2_documentation_url='https://hypothesis.readthedocs.io/'
-msys2_issue_tracker_url='https://github.com/HypothesisWorks/hypothesis/issues/'
-msys2_repository_url='https://github.com/HypothesisWorks/hypothesis/tree/master/hypothesis-python/'
-url='https://hypothesis.works/'
 license=('spdx:MPL-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-python-attrs"
          "${MINGW_PACKAGE_PREFIX}-python-sortedcontainers"
          "${MINGW_PACKAGE_PREFIX}-python-exceptiongroup")
-if [[ ${CARCH} != i686 ]]; then
 optdepends=("${MINGW_PACKAGE_PREFIX}-python-pytz: for datetime and django module"
             "${MINGW_PACKAGE_PREFIX}-python-faker: for fakefactory and django module"
             "${MINGW_PACKAGE_PREFIX}-python-django: for django module"
             "${MINGW_PACKAGE_PREFIX}-python-numpy: for numpy module"
             "${MINGW_PACKAGE_PREFIX}-python-pytest: for pytest module")
-fi
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('9c1ac9a2edb77aacae1950d8ded6b3f40dbf8483097c88336265c348d2132c71')
+sha256sums=('c88f21fba1e8f893a43c04ca422acdf13b182b8272b4d530f5bbaa753e381232')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
