python-cppy: update to 1.3.0

--- a/mingw-w64-python-cppy/PKGBUILD
+++ b/mingw-w64-python-cppy/PKGBUILD
@@ -3,22 +3,22 @@
 _realname=cppy
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.2.1
-pkgrel=3
+pkgver=1.3.0
+pkgrel=1
 pkgdesc="A collection of C++ headers which make it easier to write Python C extension modules (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/nucleic/cppy'
 msys2_references=(
   'pypi: cppy'
 )
-url='https://github.com/nucleic/cppy'
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('83b43bf17b1085ac15c5debdb42154f138b928234b21447358981f69d0d6fe1b')
+sha256sums=('da7413a286d5d31626ba35ed2c70ddfb033520cc81310088ba5a57d34039f604')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
@@ -28,15 +28,12 @@ prepare() {
 }
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}"
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  msg "Python install for ${MSYSTEM}"
   cd "${srcdir}/python-build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
