python-cryptography: update to 44.0.0

--- a/mingw-w64-python-pyopenssl/PKGBUILD
+++ b/mingw-w64-python-pyopenssl/PKGBUILD
@@ -6,17 +6,17 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=24.3.0
 pkgrel=1
 pkgdesc="Python wrapper module around the OpenSSL library (mingw-w64)"
-url='https://www.pyopenssl.org'
-license=('spdx:Apache-2.0')
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://www.pyopenssl.org'
+msys2_repository_url='https://github.com/pyca/pyopenssl/'
 msys2_references=(
   'archlinux: python-pyopenssl'
   'pypi: pyOpenSSL'
   "cpe: cpe:/a:pyopenssl:pyopenssl"
   "cpe: cpe:/a:pyopenssl_project:pyopenssl"
 )
-msys2_repository_url='https://github.com/pyca/pyopenssl/'
+license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-openssl"
          "${MINGW_PACKAGE_PREFIX}-python-cryptography")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
