--- a/mingw-w64-python-ndg-httpsclient/PKGBUILD
+++ b/mingw-w64-python-ndg-httpsclient/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.5.1
 pkgrel=7
 pkgdesc="Provides enhanced HTTPS support for httplib and urllib2 using PyOpenSSL (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/cedadev/ndg_httpsclient/'
 msys2_references=(
   'pypi: ndg-httpsclient'
