python-dateutil: update to 2.9.0.post0

--- a/mingw-w64-python-dateutil/PKGBUILD
+++ b/mingw-w64-python-dateutil/PKGBUILD
@@ -4,21 +4,19 @@ _realname=dateutil
 _pyname=python-dateutil
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=2.9.0
-pkgrel=2
+pkgver=2.9.0.post0
+pkgrel=1
 pkgdesc="Provides powerful extensions to the standard datetime module (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://github.com/dateutil/dateutil"
 msys2_references=(
   'archlinux: python-dateutil'
   'pypi: python-dateutil'
 )
 license=('spdx:BSD-3-Clause OR Apache-2.0')
-url="https://github.com/dateutil/dateutil"
-depends=("${MINGW_PACKAGE_PREFIX}-python-six")
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-six")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm")
@@ -26,7 +24,7 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-freezegun"
               "${MINGW_PACKAGE_PREFIX}-python-hypothesis")
 source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('78e73e19c63f5b20ffa567001531680d939dc042bf7850431877645523c66709')
+sha256sums=('37dd54208da7e1cd875388217d5e00ebd4179249f90fb72437e91a35459a0ad3')
 
 prepare() {
   cd "${srcdir}/${_pyname}-${pkgver}"
