python-nodeenv: update to 1.9.1

--- a/mingw-w64-python-nodeenv/PKGBUILD
+++ b/mingw-w64-python-nodeenv/PKGBUILD
@@ -3,23 +3,23 @@
 _realname=nodeenv
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.8.0
-pkgrel=4
+pkgver=1.9.1
+pkgrel=1
 pkgdesc="Node.js virtual environment builder (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/ekalinin/nodeenv'
 msys2_references=(
   'pypi: nodeenv'
 )
-url='https://github.com/ekalinin/nodeenv'
-license=('BSD')
-options=(!strip)
-depends=("${MINGW_PACKAGE_PREFIX}-python"
-         "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+license=('spdx:BSD-3-Clause')
+depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
-             "${MINGW_PACKAGE_PREFIX}-python-installer")
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+options=(!strip)
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('d51e0c37e64fbf47d017feac3145cdbb58836d7eee8c6f6d3b6880c5456227d2')
+sha256sums=('6ec12890a2dab7946721edbfbcd91f3319c6ccc9aec47be7c7e6b7011ee6645f')
 
 prepare() {
   rm -rf python-build-${MSYSTEM} | true
