--- a/mingw-w64-python-pylint-venv/PKGBUILD
+++ b/mingw-w64-python-pylint-venv/PKGBUILD
@@ -3,16 +3,16 @@
 _realname=pylint-venv
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.0.3
-pkgrel=2
+pkgver=3.0.4
+pkgrel=1
 pkgdesc="A Pylint init-hook to use the same Pylint installation with different virtual environments (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/jgosmann/pylint-venv'
 msys2_references=(
   'archlinux: python-pylint-venv'
   'pypi: pylint-venv'
 )
-url='https://github.com/jgosmann/pylint-venv'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
@@ -20,7 +20,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-poetry-core")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
-sha256sums=('df12a17fca39a94acc1c9a0f1dcf68141e90fe685569d78c046695c67c4e55fa')
+sha256sums=('4c71c2ad14fc0549699440bcc460994ffddc1481b9078404b4c43d2806ef0f59')
 
 build() {
   cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
