python-voluptuous: update to 0.15.2

--- a/mingw-w64-python-voluptuous/PKGBUILD
+++ b/mingw-w64-python-voluptuous/PKGBUILD
@@ -6,11 +6,11 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=0.14.2
-pkgrel=2
+pkgver=0.15.2
+pkgrel=1
 pkgdesc="A Python data validation library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: python-voluptuous'
   'pypi: voluptuous'
@@ -24,7 +24,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha512sums=('1e126fe659e5c2c017bb13f19c2026e203d2cdcf3b5ed5946375e5f879b9f0965544e94c63adfa7aa12facde48ff1b6c7286000ea5434ccbb8247d399d500dfc')
+sha256sums=('6ffcab32c4d3230b4d2af3a577c87e1908a714a11f6f95570456b1849b0279aa')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
