--- a/mingw-w64-python-diff-match-patch/PKGBUILD
+++ b/mingw-w64-python-diff-match-patch/PKGBUILD
@@ -3,26 +3,26 @@
 _realname=diff-match-patch
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
-pkgver=20230430
-pkgrel=3
+pkgver=20241021
+pkgrel=1
 pkgdesc='A high-performance library in multiple languages that manipulates plain text (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/diff-match-patch-python/diff-match-patch'
 msys2_references=(
   'pypi: diff-match-patch'
 )
 license=('spdx:Apache-2.0')
-url='https://github.com//diff-match-patch-python/diff-match-patch'
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-flit-core")
-source=("https://pypi.io/packages/source/${_realname:0:1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('953019cdb9c9d2c9e47b5b12bcff3cf4746fc4598eb406076fa1fc27e6a1f15c')
+source=("https://pypi.io/packages/source/${_realname:0:1}/${_realname}/${_realname//-/_}-${pkgver}.tar.gz")
+sha256sums=('beae57a99fa48084532935ee2968b8661db861862ec82c6f21f4acdd6d835073')
 
 prepare() {
   rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
+  cp -r "${_realname//-/_}-${pkgver}" "python-build-${MSYSTEM}"
 }
 
 build() {
