python-pyspnego: update to 0.11.2

--- a/mingw-w64-python-pyspnego/PKGBUILD
+++ b/mingw-w64-python-pyspnego/PKGBUILD
@@ -3,16 +3,16 @@
 _realname=pyspnego
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.10.2
-pkgrel=3
+pkgver=0.11.2
+pkgrel=1
 pkgdesc="Windows Negotiate Authentication Client and Server (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/jborean93/pyspnego'
 msys2_references=(
   'archlinux: python-pyspnego'
   'pypi: pyspnego'
 )
-url='https://github.com/jborean93/pyspnego'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-cryptography"
@@ -25,7 +25,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('9a22c23aeae7b4424fdb2482450d3f8302ac012e2644e1cfe735cf468fcd12ed')
+sha256sums=('994388d308fb06e4498365ce78d222bf4f3570b6df4ec95738431f61510c971b')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
