--- a/mingw-w64-python-pygit2/PKGBUILD
+++ b/mingw-w64-python-pygit2/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=pygit2
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.16.0
+pkgver=1.17.0
 pkgrel=1
 pkgdesc='Python bindings for libgit2 (mingw-w64)'
 arch=('any')
@@ -22,28 +22,18 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
-        "https://github.com/libgit2/pygit2/commit/eba710e45bb40e18641c6531394bb46631e7f295.patch")
-sha256sums=('7b29a6796baa15fc89d443ac8d51775411d9b1e5b06dc40d458c56c8576b48a2'
-            'e6d6c2cde580c163159bba8263c0fba4bc18af79781a6834e297cc2da242cbe9')
-
-prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-  patch -Np1 -i "${srcdir}/eba710e45bb40e18641c6531394bb46631e7f295.patch"
-  cd ..
-  rm -rf "python-build-${MSYSTEM}" | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('fa2bc050b2c2d3e73b54d6d541c792178561a344f07e409f532d5bb97ac7b894')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cd "python-build-${MSYSTEM}"
   MSYS2_ARG_CONV_EXCL="--prefix=" \
-    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 COPYING "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
