--- a/mingw-w64-mlir/PKGBUILD
+++ b/mingw-w64-mlir/PKGBUILD
@@ -5,10 +5,8 @@ _compiler=clang
 _realname=mlir
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-_version=19.1.7
-_rc=""
-_tag=llvmorg-${_version}${_rc}
-pkgver=${_version}${_rc/-/}
+_pkgver=20.1.0
+pkgver=${_pkgver/-/}
 pkgrel=1
 pkgdesc="Multi-Level IR Compiler Framework for LLVM (mingw-w64)"
 url="https://mlir.llvm.org/"
@@ -28,27 +26,29 @@ makedepends=($([[ ${_compiler} != clang ]] && echo \
             #"${MINGW_PACKAGE_PREFIX}-pybind11")
 # optdepends=("${MINGW_PACKAGE_PREFIX}-python: Python bindings")
 options=('!strip')
-_pkgfn=${_realname}-${pkgver}.src
-_url=https://github.com/llvm/llvm-project/releases/download/${_tag}
+_pkgfn=${_realname}-${_pkgver}.src
+_url=https://github.com/llvm/llvm-project/releases/download/llvmorg-${_pkgver}
 source=("${_url}/${_pkgfn}.tar.xz"{,.sig}
-        "${_url}/cmake-${pkgver}.src.tar.xz"{,.sig}
+        "${_url}/cmake-${_pkgver}.src.tar.xz"{,.sig}
         0001-tablegen.patch
         0002-add-missing-compile-definitions.patch
-        0003-Fix-build-MLIRExecutionEngineShared.patch)
-sha256sums=('4e1ea9ed9a60589466ad89d4b739f12a3a51fb828caaebc3bfc59172c6ce0eee'
+        0003-Fix-build-MLIRExecutionEngineShared.patch
+        0004-disable-mlir-pdll-lsp-server-with-clang.patch)
+sha256sums=('ddf793e12076765d62d79a3fdf93c1be463d89f1d69eca3b08041ee57680e9ac'
             'SKIP'
-            '11c5a28f90053b0c43d0dec3d0ad579347fc277199c005206b963c19aae514e3'
+            '9fcd319c6bb87344673f262ef5a6a01262fc9a0a741f3477b7e47e238441268d'
             'SKIP'
             '3f61c66d5615e387ac1c00dbeb1b5840305ff578de81d60eb65553ff17ced8c6'
             'd007b26d4c97667518f524105d5a7a14c9fe9e5f595fd48562dacb722ea650fa'
-            'c6048c4042d47d2d3e7d13f0f8af78bf6120d8d8d86f9a8eaf2b433ee1926e80')
+            'f10e69fdc3d2045118fde247ebaee1f3390166e117809d7bf3c543c95743b6cf'
+            'f0b957f839577c7da4fc112e626452aac7ee2b28c78ae7f4b25d8066121330e4')
 validpgpkeys=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D'  # Hans Wennborg, Google.
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard
               'D574BD5D1D0E98895E3BF90044F2485E45D59042') # Tobias Hieta
 
 prepare() {
   [[ -d ./cmake ]] && rm -rf ./cmake
-  mv cmake-$pkgver.src cmake
+  mv cmake-${_pkgver}.src cmake
 
   cd "${srcdir}"/${_pkgfn}
   patch -p1 -i "${srcdir}"/0001-tablegen.patch
@@ -56,6 +56,10 @@ prepare() {
   # from the library, Either a bug from CMake or LLVM.
   patch -p1 -i "${srcdir}"/0002-add-missing-compile-definitions.patch
   patch -p1 -i "${srcdir}"/0003-Fix-build-MLIRExecutionEngineShared.patch
+
+  if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
+    patch -p1 -i "${srcdir}"/0004-disable-mlir-pdll-lsp-server-with-clang.patch
+  fi
 }
 
 build() {
@@ -74,6 +78,7 @@ build() {
     _extra_config+=(-DLLVM_ENABLE_LLD=ON)
   fi
 
+  CXXFLAGS+=" -Wno-dangling-assignment-gsl" \
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake \
     -GNinja \
@@ -85,7 +90,7 @@ build() {
     -DLLVM_LINK_LLVM_DYLIB=ON \
     -DLLVM_BUILD_LLVM_DYLIB=ON \
     -DMLIR_BUILD_MLIR_C_DYLIB=ON \
-    -DMLIR_LINK_MLIR_DYLIB=ON \
+    -DMLIR_LINK_MLIR_DYLIB=OFF \
     -DLLVM_BUILD_TOOLS=ON \
     -DLLVM_BUILD_UTILS=ON \
     -DLLVM_ENABLE_PIC=ON \
